--- a/app/pug/sections/_s2_main_slider.pug
+++ b/app/pug/sections/_s2_main_slider.pug
@@ -22,7 +22,9 @@
             .title
                 | Цены 
             .text
-                | Точная стоимость зависит от сложности проекта. Минимум - 90 000 ₸
+                | Точная стоимость зависит от сложности проекта. Минимум - 
+                br
+                | 90 000 ₸
     .handout 
         .handout__image
             img(src="images/svg/handout_02.svg")  
@@ -46,4 +48,6 @@
             .title
                 | Гарантии 
             .text
-                | В стоимость бизнес-плана включено внесение возможных корректировок в случае изменения параметров проекта
+                | В стоимость 
+                br
+                |бизнес-плана включено внесение возможных корректировок в случае изменения параметров проекта
