--- a/app/pug/sections/_s3_services.pug
+++ b/app/pug/sections/_s3_services.pug
@@ -1,30 +1,30 @@
 h2 Наши услуги
-.garanty_cards
+.services_cards
     .card.green
         .card_content
             .card_icon
-                img(src="images/svg/card_01.svg")
+                img(src="images/card_01.png")
             .card_title Разработка бизнес-планов и ТЭО
             .card_text Бизнес-план поможет решить несколько задач. Получить субсидии от государства. Привлечь банковский кредит для открытия или расширения бизнеса. Предоставить бизнес-план частному инвестору 
         .arrow_btn
     .card
         .card_content
             .card_icon
-                img(src="images/svg/card_02.svg")
+                img(src="images/card_02.png")
             .card_title Маркетинговые исследования
             .card_text Маркетинговые исследования необходимы, когда нужно понять конъюнктуру рынка, анализировать потребителей, исследовать предложения конкурентов в определенной нише.
         .arrow_btn
     .card
         .card_content
             .card_icon
-                img(src="images/svg/card_03.svg")
+                img(src="images/card_03.png")
             .card_title Расчет финансовой модели
             .card_text Финансовая модель  это стержень вашего бизнеса. В ней представлены доходы-расходы предприятия, динамика денежных потоков, расчеты основных финансовых показателей, позволяющих оценить эффективность проекта.
         .arrow_btn
     .card.green
         .card_content
             .card_icon
-                img(src="images/svg/card_04.svg")
-            .card_title Подготовка презентации проекта
-            .card_text Маркетинговые исследования необходимы, когда нужно понять конъюнктуру рынка, анализировать потребителей, исследовать предложения конкурентов в определенной нише.
+                img(src="images/card_04.png")
+            .card_title.no_margin Подготовка презентации проекта
+            .card_text Если Вы хотите привлечь внимание или заинтересовать потенциального инвестора вашим проектом, то для этого вам будет необходим краткий презентабельный документ  бизнес-презентация.
         .arrow_btn
