--- a/app/pug/sections/_s6_scheme.pug
+++ b/app/pug/sections/_s6_scheme.pug
@@ -16,15 +16,12 @@ mixin scheme_item(num, title, text)
         +scheme_item("03", "Внесение предоплаты", "Выставляем счет на предоплату 50%. Составляем ТЗ на разработку проекта и ")
         +scheme_item("04", "Работа над проектом", "Подготавливаем проект в согласованные сроки. В среднем от 5 – 15 рабочих дней")
         +scheme_item("05", "Презентация проекта","Высылаем демо-версию проекта на согласование. Устраняем возможные замечания и вносим необходимые корректировки ")
-        +scheme_item("06", "Завершение проекта", "Разбираем имеющуюся у Вас информацию, согласовываем стоимость, сроки и ключевые моменты работы. ")
-        
-    //- .scheme 
-    //-     .scheme_item 
-    //-         .scheme_item__number 
-    //-             .check_mark 
-    //-             .number 01
-    //-             .arrow
-    //-         .scheme_item__text 
-    //-             .title Звонок или заявка на сайте
-    //-             .text
-    //-                 | Менеджер свяжется с Вами, проведет бесплатную консультацию и назначит при необходимости встречу
+        .scheme_item 
+            .scheme_item__number 
+                .check_mark 
+                .number 06
+            .scheme_item__text 
+                .title Завершение проекта
+                .text 
+                    |Разбираем имеющуюся у Вас информацию, согласовываем стоимость, сроки и ключевые моменты работы. 
+                    strong Бесплатные корректировки. В течение 2 месяцев  вносим бесплатные корректировки по желанию заказчика
