--- a/app/pug/sections/_s4_garanty.pug
+++ b/app/pug/sections/_s4_garanty.pug
@@ -1,14 +1,20 @@
-h2 Наши гарантии
-.garanty_cards 
-    .garanty_card
-        .icon 
-        .title Гарантия качества
-        .text Ваш бизнес-план оформлен в соответствие с требованиями инвестора, банка или государственного учреждения, он учитывает особенности Вашего региона и включает в себя все необходимые расчеты и пояснения
-    .garanty_card
-        .icon 
-        .title Оптимальные сроки
-        .text Вы спокойны – Ваш бизнес-план разработан в согласованный с Вами срок и у Вас есть время подготовиться к его защите
-    .garanty_card
-        .icon 
-        .title Бесплатное сопровождение
-        .text Мы готовы проконсультировать Вас о том, как успешно защитить бизнес-план. При необходимости мы поможем Вам подготовить его презентацию
+.garanty_bg
+    .bg
+    .container
+        h2 Наши гарантии
+        .garanty_cards 
+            .garanty_card
+                .icon 
+                .title Гарантия качества
+                .text Ваш бизнес-план оформлен в соответствие с требованиями инвестора, банка или государственного учреждения, он учитывает особенности Вашего региона и включает в себя все необходимые расчеты и пояснения
+            .garanty_card
+                .icon 
+                .title Оптимальные сроки
+                .text Вы спокойны – Ваш бизнес-план разработан в согласованный с Вами срок и у Вас есть время подготовиться к его защите
+            .garanty_card
+                .icon 
+                .title Бесплатное сопровождение
+                .text Мы готовы проконсультировать Вас о том, как успешно защитить бизнес-план. При необходимости мы поможем Вам подготовить его презентацию
+        .garanty_slider_nav 
+            .nav_block.active 
+            .nav_block 
