--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,7 +1,13 @@
 
 $font_family:  'Gilroy', sans-serif;
 $color_text: #2b2b2b;
+
+// colors
+$orange: #f86b2c;
 $green: #9ab963;
+$gray: #cdcfcf;
+$nav_green: #8eb24c;
+$nav_gray: #d9d9d9;
 
 // folders
 
