--- a/app/scss/sections/_s4_garanty.scss
+++ b/app/scss/sections/_s4_garanty.scss
@@ -1,6 +1,7 @@
 .garanty_cards {
     display: flex;
     justify-content: center;
+    margin-top: 66px;
 
     .garanty_card {
         padding: 300px 15px 60px 15px;
@@ -13,6 +14,7 @@
         max-width: 365px;
         height: 500px;
         position: relative;
+
 
         .icon {
             border-radius: 50%;
@@ -32,11 +34,11 @@
             @extend %font_bold;
             font-size: 18px;
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .text {
-            @extend %font;
+            @extend %font_normal;
             font-size: 15px;
             text-align: center;
         }
@@ -51,4 +53,39 @@
             }
         }
       }
+}
+
+.garanty_bg {
+    position: relative;
+    .bg{
+        background:#f9fafb;
+        top: 260px;
+        position: absolute;
+        width: 100%;
+        display: block;
+        height: 1000px;
+        z-index: -4;
+    }
+}
+
+.garanty_slider_nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 50px 0;
+
+    .nav_block {
+        border-radius: 50%;
+        height: 16px;
+        width: 16px;
+        background-color: $nav_gray;
+        margin-right: 15px;
+        cursor: pointer;
+    }
+
+    .nav_block.active {
+        background-color: $nav_green;
+    }
+
 }
