--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -10,13 +10,22 @@ $sizes: ("xs":320px, "sm":576px, "md":768px, "lg":992px, "xl":1200px);
     }
   }
 
+
 @mixin _lg {
   @media (max-width: 992px){
       @content;
   }
 } 
+
+
 @mixin _sm {
   @media (max-width: 576px){
       @content;
   }
 } 
+
+@mixin _xl {
+  @media (max-width: 1200px){
+      @content;
+  }
+}
