--- a/app/scss/sections/_s4_garanty.scss
+++ b/app/scss/sections/_s4_garanty.scss
@@ -1,6 +1,7 @@
 .garanty_cards {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 66px;
 
     .garanty_card {
