--- a/app/pug/sections/_s8_commands.pug
+++ b/app/pug/sections/_s8_commands.pug
@@ -6,10 +6,10 @@ mixin team_item(num, name, position)
         .position= position
 
 .container 
-    h2 Кто будет работать над вашим проектом 
+    h2.z-index2 Кто будет работать над вашим проектом 
     .team 
         +team_item("1", "Бауыржан Калменов", "Экономист")
         +team_item("2", "Денис Скородумов", "Маркетолог")
         +team_item("3", "Юлия Дойникова", "Маркетолог")
-        +team_item("4", "Дмитрий Грохольский", "Маркетолог")
-        +team_item("5", "Бауыржан Калменов", "Экономист")
+        +team_item("4", "Ирина Михайлова", "Маркетолог")
+        +team_item("5", "Дмитрий Грохольский", "Экономист")
