--- a/app/scss/sections/_s10_clients.scss
+++ b/app/scss/sections/_s10_clients.scss
@@ -1,19 +1,24 @@
 .clients {
-    margin-top: 300px;
+    margin-top: 60px;
     display: flex;
     justify-content: space-between;
     background: url($images + "kz_bg.png") no-repeat left bottom;
-    margin-bottom: 80px;
+    margin-bottom: 80px; 
 
-    @include _sm {
+    @include _lg {
         flex-direction: column;
+        align-items: center;
     }
 
     .clients__text_block,
     .clients__sliders {
         width: 46%;
-        @include _sm {
-            width: 100%;
+
+        @include _xl {
+            width: 460px;
+        }
+        @include _lg {
+            width: 318px;
         }
     }
     
@@ -24,6 +29,10 @@
         line-height: 1.2;
         position: relative;
         max-width: 520px;
+        @include _lg {
+            font-size: 24px;
+        }
+
         @include _sm {
             font-size: 18px;
         }
@@ -43,49 +52,27 @@
         @extend %font;
         margin-top: 40px;
         font-size: 18px;
+        @include _lg {
+            font-size: 16px;
+        }
         @include _sm {
             font-size: 13px;
         }
     }
+    .clients__sliders {
+        overflow: hidden;
+    }
 
-    .client_slider {
+    .client_slider_wrapper {
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        @include _sm {
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .client_slider__item {
-            margin-bottom: 20px;
-            .image {
-                border-radius: 5px;
-                background-color: rgb(255, 255, 255);
-                box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.13);
-                width: 230px;
-                height: 89px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .client_title {
-                @extend %font_medium;
-                width: 230px;
-                font-size: 18px;
-                text-align: center;
-                margin-top: 30px;
-            }
-        }
+        flex-direction: column;
 
         .slider_nav {
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-bottom: 40px;
+            margin: 40px 0;
             
             .bar {
                 background-color: rgb(204, 204, 204);
@@ -95,10 +82,75 @@
                 margin-left: 20px;
               }
 
-              .active {
-                  background-color: #f96422;
-              }
+            .active {
+                background-color: #f96422;
+            }
               
         }
+    }
+
+    .client_slider {
+        width: 200%;
+        height: 340px;
+        display: flex;
+        justify-content: flex-start;
+        transform: translateX(0);
+        transition: transform 0.5s ease-in-out;
+        
+        @include _sm {
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .client_slider__block {
+            width: 530px;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            overflow: hidden;
+            align-items: flex-start;
+
+            @include _xl {
+                width: 460px;
+            }
+
+            @include _xl {
+                width: 310px;
+            }
+        }
+
+        .client_slider__item {
+            margin: 16px;
+            .image {
+                border-radius: 5px;
+                background-color: rgb(255, 255, 255);
+                box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.13);
+                padding: 8px;
+                width: 230px;
+                height: 89px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                @include _xl {
+                    width: 100px;
+                }
+            }
+
+            .client_title {
+                @extend %font_medium;
+                width: 230px;
+                font-size: 18px;
+                text-align: center;
+                margin-top: 30px;
+
+                @include _xl {
+                    width: 100px;
+                    font-size: 11px;
+                }
+            }
+        }
+
+
     }
 }
