--- a/app/scss/sections/_s11_qa.scss
+++ b/app/scss/sections/_s11_qa.scss
@@ -1,4 +1,5 @@
 .faq_block {
+    margin-top: 50px;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.13);
