--- a/app/scss/sections/_s8_commands.scss
+++ b/app/scss/sections/_s8_commands.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
+    position: relative;
+    z-index: 2;
     @include _sm {
         flex-wrap: wrap;
     }
